# vmware-vcenter-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.enterprise  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.enterprise.yml  docker-compose.yml  format_code.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-enterprise.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  contributors.yml
config/: enterprise.yaml
docs/: API.md  DEPLOYMENT.md  ENTERPRISE_SECURITY.md
examples/: secure_config_example.py
scripts/: healthcheck.sh
src/vmware_vcenter_mcp/: __init__.py  __main__.py  audit_logger.py  cache.py  config_protection.py  enterprise_server.py  exceptions.py  gdpr_compliance.py  health_monitor.py  logging_config.py  metrics.py  rate_limiter.py  secrets_manager.py  server.py  session_manager.py  threat_intelligence.py
src/vmware_vcenter_mcp/core/: __init__.py  api.py  auth.py  database.py  ha.py  monitoring.py  orchestration.py  security.py  tenant.py
tests/: __init__.py  test_basic.py  test_server.py
tests/unit/: test_basic.py  test_datacenter_operations.py
